# claudit

./: .gitignore  AGENTS.md  API_REFERENCE.md  README.md  pyproject.toml
.claude/: context.md
.claude/skills/: graph.md  harness.md  highlight.md  index.md  path.md  reachability.md
.claude/skills/graph/: SKILL.md
.claude/skills/harness/: SKILL.md
.claude/skills/highlight/: SKILL.md
.claude/skills/index/: SKILL.md
.claude/skills/path/: SKILL.md
.github/workflows/: coverage.yml
dev/: RESULTS_FORMAT.md  claudit-cli-lessons.md
skill-evals-workspace/: PROGRESS.md
skill-evals-workspace/evals/: evals.json
skill-evals-workspace/iteration-1/eval-graph-callees/: eval_metadata.json
skills/: results.skill
skills/graph/: SKILL.md
skills/harness/: SKILL.md
skills/highlight/: SKILL.md
skills/index/: SKILL.md
skills/path/: SKILL.md
skills/results/: SKILL.md
src/claudit/: __init__.py  cli.py  errors.py  lang.py
tests/: conftest.py  test_cli.py  test_cli_full.py  test_cli_new.py  test_lang.py
tests/test_graph/: test_api.py  test_cache.py  test_callgraph.py  test_graph_api_full.py
tests/test_harness/: __init__.py  test_api.py  test_dependency_analyzer.py  test_extractor.py  test_harness_integration.py  test_signature.py  test_signature_full.py  test_stubber.py
tests/test_highlight/: test_api.py  test_renderer.py  test_renderer_full.py
tests/test_index/: test_api.py  test_index_api_full.py  test_indexer.py
tests/test_path/: test_api.py  test_pathfinder.py
tests/test_reachability/: test_cache.py  test_callgraph.py  test_core.py  test_indexer.py  test_pathfinder.py
(+103 files in other folders)
